fix: small amount of unnecessary scrolling
Previously each page would show the scrollbar and allow the page to be scrolled down by a tiny amount, even if it appeared that everything should fix comfortably on the page. This behaviour now no longer happens.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .siteTitle {
-  margin-top: 0.5em;
-  margin-left: 0.5em;
+  padding-top: 0.5em;
+  padding-left: 0.5em;
 
   &:before {
     content: '\2630';
